# openvpn-ldap

./: .travis.yml  Cargo.toml  LICENSE  README.md  example.conf
.github/: dependabot.yml
.github/workflows/: tests.yml
src/: auth.rs  config.rs  ldap.rs  lib.rs
